--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <meta property="og:image" content="./Imagenes/Turistico/sean-oulashin-KMn4VEeEPR8-unsplash.jpg">
     <meta property="og:image:alt" content="alt si la imagen no carga">
 </head>
-
 <body id="inicio">
     <!-- <header>
         <span class="logo">Logo</span>
@@ -49,7 +48,7 @@
     <main id="hero">
         <div class="box-1">
             <h1>Algo muy importante</h1>
-            <form class="flying-box">
+            <div class="flying-box" >
                 <div class="container-grid">
                     <div class="input-wrapper">
                         <i class="fa-solid fa-location-dot"></i>
@@ -68,8 +67,8 @@
                         <input type="text" placeholder="Ingresa tu informacion">
                     </div>
                 </div>
-                <button type="submit">Confirmar</button>
-            </form>
+                <button type="submit" id="confirm">Cambiar fondo</button>
+            </div>
             <div class="logos-wrapper">
                 <img src="./imagenes/SVG/MasterCard_Logo.svg" alt="">
                 <img src="./imagenes/SVG/Visa_Inc._logo.svg" alt="">
