mobile design and first animations

--- a/index.html
+++ b/index.html
@@ -46,51 +46,48 @@
         </nav>
     </header> -->
     <main id="hero">
-        <div class="box-1">
-            <h1>Algo muy importante</h1>
-            <div class="flying-box" >
-                <div class="container-grid">
-                    <div class="input-wrapper">
-                        <i class="fa-solid fa-location-dot"></i>
-                        <input type="text" placeholder="Ingresa tu informacion">
-                    </div>
-                    <div class="input-wrapper">
-                        <i class="fa-solid fa-car"></i>
-                        <input type="text" placeholder="Ingresa tu informacion">
-                    </div>
-                    <div class="input-wrapper">
-                        <i class="fa-solid fa-road"></i>
-                        <input type="text" placeholder="Ingresa tu informacion">
-                    </div>
-                    <div class="input-wrapper">
-                        <i class="fa-solid fa-check"></i>
-                        <input type="text" placeholder="Ingresa tu informacion">
-                    </div>
+        <div class="main">
+            <h1>Pickup Taxi Service</h1>
+                <div class="main-content">
+                    <strong>Servicio de transporte ubicado en Puerto vallarta.</strong>
+                    <span>
+                        Actualmente, uno de los lugares más visitados del país
+                        y la segunda ciudad mas importante del estado de Jalisco
+                </span>
+                    <button>Planea tu viaje</button>
                 </div>
-                <button type="submit" id="confirm">Cambiar fondo</button>
-            </div>
+               
             <div class="logos-wrapper">
                 <img src="./imagenes/SVG/MasterCard_Logo.svg" alt="">
                 <img src="./imagenes/SVG/Visa_Inc._logo.svg" alt="">
-                <span>EN</span>
             </div>
         </div>
-
     </main>
-    <section id="second">
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius perspiciatis dolor quidem.</h2>
-
+    <section id="local">
+        <h2>Adentrate a algo muy importante</h2>
+        <div class="grid-wrapper">
+            <img src="./imagenes/pexels-roberto-hund-5356240.jpg" alt="" id="big-grid-img">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit ad molestiae, dignissimos, suscipit illo
+                saepe nemo sapiente quia ullam placeat delectus, quos minima maiores blanditiis error maxime laudantium consectetur
+                atque.</p>
+        </div>
+    </section>
+    <section id="skills">
+        <h2>Garantizamos los siguientes servicios</h2>
         <div class="service-content-wrapper">
             <div class="service">
+                <h3>Viajes seguros</h3>
                 <i class="fa-solid fa-shield"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, commodi?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem odio voluptatibus? Rerum, libero natus!</p>
             </div>
-            <div class="service">
+            <div class="service">\
+                <h3>Calendario Ajustable</h3>
                 <i class="fa-solid fa-calendar-days"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, commodi?</p>
             </div>
             <div class="service">
-                <i class="fa-regular fa-clock"></i>
+                <h3>Metodo de pago</h3>
+                <i class="fa-solid fa-dollar-sign"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, commodi?</p>
             </div>
         </div>
