--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <meta property="og:image:alt" content="alt si la imagen no carga">
 </head>
 <body id="inicio">
-    <!-- <header>
-        <span class="logo">Logo</span>
+    <header>
+        <span class="logo">Pickup Taxi Service</span>
         <button aria-controls="navigation" aria-expanded="false" class="bars-menu-btn"></button>
         <nav class="navbar">
             <button aria-controls="navigation" aria-expanded="true" class="close-menu-btn"></button>
             <ul id="navigation">
                 <li><a href="#inicio">Inicio</a></li>
                 <li id="transportes">
-                    <div role="none" class="flex justify-center place-items-center gap-2">
+                    <div class="flex justify-center place-items-center gap-2">
                         <span aria-controls="tipo-transportes" aria>Transporte</span>
-                        <img src="./Imagenes/SVG/caret-down-solid.svg" alt="Flecha abajo" role="none"
+                        <img src="./imagenes/SVG/caret-down-solid.svg" 
                             class="smallest-w-icon">
                     </div>
                     <ul class="subnavigation" id="tipo-transportes" aria-expanded="false">
@@ -44,17 +44,16 @@
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
-    </header> -->
+    </header>
     <main id="hero">
         <div class="main">
-            <h1>Pickup Taxi Service</h1>
                 <div class="main-content">
-                    <strong>Servicio de transporte ubicado en Puerto vallarta.</strong>
+                    <h1>Viaja por Puerto vallarta y sus alrededores</h1>
                     <span>
                         Actualmente, uno de los lugares más visitados del país
                         y la segunda ciudad mas importante del estado de Jalisco
                 </span>
-                    <button>Planea tu viaje</button>
+                    <a href="#contact">Planea tu viaje</a>
                 </div>
                
             <div class="logos-wrapper">
@@ -63,17 +62,17 @@
             </div>
         </div>
     </main>
-    <section id="local">
-        <h2>Adentrate a algo muy importante</h2>
+    <section id="local" >
+        <h2 class="text-center">Adentrate a algo muy importante</h2>
         <div class="grid-wrapper">
             <img src="./imagenes/pexels-roberto-hund-5356240.jpg" alt="" id="big-grid-img">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit ad molestiae, dignissimos, suscipit illo
+            <p class="big-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit ad molestiae, dignissimos, suscipit illo
                 saepe nemo sapiente quia ullam placeat delectus, quos minima maiores blanditiis error maxime laudantium consectetur
                 atque.</p>
         </div>
     </section>
-    <section id="skills">
-        <h2>Garantizamos los siguientes servicios</h2>
+    <section id="skills" >
+        <h2 class="text-center">Garantizamos los siguientes servicios</h2>
         <div class="service-content-wrapper">
             <div class="service">
                 <h3>Viajes seguros</h3>
@@ -81,7 +80,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem odio voluptatibus? Rerum, libero natus!</p>
             </div>
             <div class="service">\
-                <h3>Calendario Ajustable</h3>
+                <h3>Horario Ajustable</h3>
                 <i class="fa-solid fa-calendar-days"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, commodi?</p>
             </div>
@@ -91,6 +90,76 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, commodi?</p>
             </div>
         </div>
+    </section>
+    <section id="foraneo" class="bottom">
+        <h2>Visita las diferentes regiones y municipos de Jalisco</h2>
+        <p>Contamos con un servicio de transprote afuera de la region</p>
+        <ul class="flex-container-wrap" id="foraneo-list">
+            <li>
+                <figure>
+                    <img loading="lazy" src="./Imagenes/Locales/hotel.jpg" alt="">
+                    <figcaption>
+                        <span>Guadalajara</span>
+                        <img src="./Imagenes/SVG/icon-location.svg" alt="">
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img loading="lazy" src="./Imagenes/Locales/hotel.jpg" alt="">
+                    <figcaption>
+                        <span>Mascota</span>
+                        <img src="./Imagenes/SVG/icon-location.svg" alt="">
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img loading="lazy" src="./imagenes/locales/hotel.jpg" alt="">
+                    <figcaption>
+                        <span>San Sebastian</span>
+                        <img src="./Imagenes/SVG/icon-location.svg" alt="">
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img loading="lazy" src="./imagenes/locales/hotel.jpg" alt="">
+                    <figcaption>
+                        <span>Melaque</span>
+                        <img src="./Imagenes/SVG/icon-location.svg" alt="">
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img loading="lazy" src="./imagenes/locales/hotel.jpg" alt="">
+                    <figcaption>
+                        <span>Barra de navidad</span>
+                        <img src="./Imagenes/SVG/icon-location.svg" alt="">
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img loading="lazy" src="./imagenes/locales/hotel.jpg" alt="">
+                    <figcaption>
+                        <span>Tepic</span>
+                        <img src="./Imagenes/SVG/icon-location.svg" alt="">
+                    </figcaption>
+                </figure>
+            </li>
+        </ul>
+    </section>
+    <section id="contact">
+        <h2>Ponte en contacto</h2>
+        <strong>Conductor</strong>
+        <span class="contact-name">Roberto Figueroa</span>
+        <a href="https://wa.me/529712655254" target="_blank" class="contact-whatsapp-link">
+            <img src="./imagenes/SVG/whatsapp.svg" alt="WhatsApp Icono" class="sml-icon">
+            <span aria-label="Numero telefonico" class="contact-phone">+52 322 217 9393</span>
+        </a>
+    
     </section>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
