presenting 80% of the page done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicio De Transporte</title>
+    <title>Servicio De Transporte y Turismo en Puerto Vallarta</title>
     <!-- Page Icon -->
     <link rel="shortcut icon" href="./imagenes/page-icon.svg" type="image/x-icon">
     <!-- Style -->
@@ -60,7 +60,7 @@
                             Actualmente, uno de los lugares más visitados del país
                             y la segunda ciudad mas importante del estado de Jalisco
                         </span>
-                        <a href="#contact">Planea tu viaje</a>
+                        <a href="#contacto">Planea tu viaje</a>
                     </div>
                 </div> 
             <div class="logos-wrapper">
@@ -99,15 +99,15 @@
         </div>
     </section>
     <section id="foraneo">
-        <h2>Visita las diferentes regiones y municipos de Jalisco</h2>
-        <p class="italic">Contamos con un excelente servicio de transporte </p>
+        <h2>Visita las diferentes regiones y municipios de Jalisco</h2>
+        <h3 class="italic">Aventurate viajando a las diferentes regiones del estado de Jalisco y sus alrededores </h3>
         <div class="swiper mySwiper">
             <ul class="flex-container-wrap swiper-wrapper" id="foraneo-list">
                 <li class="swiper-slide">
                 <figure>
                         <img loading="lazy" src="./imagenes/guadalajara-jalisco.jpg" class="location-icon" alt="">
                         <figcaption>
-                            <span>Guadalajara</span>
+                            <span>Guadalajara, Jalisco</span>
                             <img src="./imagenes/SVG/icon-location.svg" class="location-icon" alt="">
                         </figcaption>
                     </figure>
@@ -152,7 +152,7 @@
                 <figure>
                         <img loading="lazy" src="./imagenes/mascota-jalisco.jpg" alt="">
                         <figcaption>
-                            <span>Tepic</span>
+                            <span>Tepic, Nayarit</span>
                             <img src="./imagenes/SVG/icon-location.svg" class="location-icon" alt="">
                         </figcaption>
                     </figure>
@@ -168,6 +168,8 @@
     </section>
     <section id="contacto">
         <h2>Ponte en contacto</h2>
+        <div class="contacto-contexto">
+        </div>
         <div class="personal-info">
             <div class="driver">
                 <strong>Conductor</strong>
@@ -175,7 +177,8 @@
             </div>
             <a href="https://wa.me/523222179393" target="_blank" class="contact-whatsapp-link">
                 <img src="./imagenes/SVG/whatsapp.svg" alt="WhatsApp logo" class=" whatsapp-logo">
-                <span aria-label="Numero telefonico" class="contact-phone">+52 322 217 9393</span>
+                <span hidden>Numero de telefono</span>
+                <span aria-label="Numero telefonico" class="contact-phone">(+52) 322 217 9393</span>
             </a>
         </div>
     </section>
