contacto 1st version

--- a/index.html
+++ b/index.html
@@ -167,10 +167,8 @@
         <h2>Algo sobre tours</h2>
     </section>
     <section id="contacto">
-        <h2>Ponte en contacto</h2>
-        <div class="contacto-contexto">
-        </div>
         <div class="personal-info">
+            <h2>Ponte en contacto</h2>
             <div class="driver">
                 <strong>Conductor</strong>
                 <span class="contact-name">Roberto Figueroa</span>
@@ -180,7 +178,11 @@
                 <span hidden>Numero de telefono</span>
                 <span aria-label="Numero telefonico" class="contact-phone">(+52) 322 217 9393</span>
             </a>
+            <div class="contacto-contexto">
+                <strong class="promo-contexto">Llama ya y da el primer paso a tu siguiente destino</strong>
+            </div>
         </div>
+        <div class="contacto-bg"></div>
     </section>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
