first contact final 1

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
     </section>
     <section id="contacto">
         <div class="personal-info">
-            <h2>Ponte en contacto</h2>
+            <h2>Contacto</h2>
             <div class="driver">
-                <strong>Conductor</strong>
+                <strong>Conductor:</strong>
                 <span class="contact-name">Roberto Figueroa</span>
             </div>
             <a href="https://wa.me/523222179393" target="_blank" class="contact-whatsapp-link">
@@ -179,7 +179,7 @@
                 <span aria-label="Numero telefonico" class="contact-phone">(+52) 322 217 9393</span>
             </a>
             <div class="contacto-contexto">
-                <strong class="promo-contexto">Llama ya y da el primer paso a tu siguiente destino</strong>
+                <strong class="promo-contexto">Llama y da el primer paso a tu siguiente destino!</strong>
             </div>
         </div>
         <div class="contacto-bg"></div>
