Font family changed for headers and body text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600&family=Hedvig+Letters+Serif:opsz@12..24&family=Lora:ital,wght@0,400;0,700;1,400&family=Zilla+Slab&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,700;1,9..40,300&family=Lora:ital,wght@0,400;0,700;1,400&family=Roboto+Slab:wght@400;700&display=swap"
         rel="stylesheet">
     <!-- Open Graph -->
     <meta property="og:title" content="Turismo Puerto Vallarta">
@@ -161,8 +161,8 @@
                     </figure>
                 </li>
             </ul>
-            <div  class="swiper-button-next"></div>
             <div  class="swiper-button-prev"></div>
+            <div  class="swiper-button-next"></div>
         </div>
         <dialog id="swiper-modal">
             <div class="info-container flex-col place-items-center justify-center">
