google maps added and content rewritten 1st version

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,700;1,9..40,300&family=Lora:ital,wght@0,400;0,700;1,400&family=Roboto+Slab:wght@400;700&display=swap"
         rel="stylesheet">
     <!-- Open Graph -->
-    <meta property="og:title" content="Turismo Puerto Vallarta">
+    <meta property="og:title" content="Viajes y Turismo en Puerto Vallarta">
     <meta property="og:description" content="Servicio de Tours y transporte en puerto Vallarta Mexico">
-    <meta property="og:image" content="./imagenes/SVG/MasterCard_Logo.svg">
-    <meta property="og:image:alt" content="alt si la imagen no carga">
+    <meta property="og:image" content="./imagenes/puerto vallarta.jpeg">
+    <meta property="og:image:alt" content="Ciudad de Puerto Vallarta Jalisco">
 </head>
 <body id="inicio">
     <header>
@@ -70,12 +70,10 @@
         </div>
     </main>
     <section id="local" >
-        <h2 class="text-center">Adentrate a algo muy importante</h2>
+        <h2 class="text-center">Aventura en Puerto Vallarta</h2>
         <div class="grid-wrapper">
             <img src="./imagenes/pickup-taxi.jpg">
-            <p class="big-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit ad molestiae, dignissimos, suscipit illo
-                saepe nemo sapiente quia ullam placeat delectus, quos minima maiores blanditiis error maxime laudantium consectetur
-                atque.</p>
+            <p class="big-text">Disfruta de la ciudad. Recorre su Malecón al centro de la ciudad. Zonas románticas donde conocerás colonias antiguas y gozarás de una vida nocturna. marina Vallarta. Malecón y restaurantes. Conoce las bellas playas o si prefieres algo más extremo,explora los tours en  tirolesas  </p>
         </div>
     </section>
     <section id="skills" >
@@ -84,17 +82,18 @@
             <div class="service">
                 <h3>Viajes seguros</h3>
                 <i class="fa-solid fa-shield"></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem odio voluptatibus? Rerum, libero natus!</p>
+                <p>Tanto en viajes <a href="#local" class="skill-link">Locales</a> como <a href="#foraneo" class="skill-link">Foráneos</a>
+                Se ejerce la máxima precaución.</p>
             </div>
             <div class="service">
                 <h3>English Spoken</h3>
                 <strong>EN</strong>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, commodi?</p>
+                <p>Chofer con experiencia</p>
             </div>
             <div class="service">
                 <h3>Metodo de pago</h3>
                 <i class="fa-solid fa-dollar-sign"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, commodi?</p>
+                <p>Tarjeta de credito / Pago en efectivo</p>
             </div>
         </div>
     </section>
@@ -116,7 +115,7 @@
                 <figure>
                         <img loading="lazy" src="./imagenes/mascota-jalisco.jpg" alt="">
                         <figcaption>
-                            <span>Mascota</span>
+                            <span>Mascota, Jalisco</span>
                             <img src="./imagenes/SVG/icon-location.svg" class="location-icon" alt="">
                         </figcaption>
                     </figure>
@@ -135,25 +134,28 @@
                 </li>
                 <li class="swiper-slide">
                 <figure>
-                        <img loading="lazy" src="./imagenes/mascota-jalisco.jpg" alt="">
+                        <img loading="lazy" src="./imagenes/melaque.jpg" alt="">
                         <figcaption>
-                            <span>Melaque</span>
+                            <span>San patricio melaque, Jalisco</span>
                             <img src="./imagenes/SVG/icon-location.svg" class="location-icon" alt="">
                         </figcaption>
                     </figure>
                 </li>
                 <li class="swiper-slide">
                 <figure>
-                        <img loading="lazy" src="./imagenes/mascota-jalisco.jpg" alt="">
+                    <div class="maps-container">
+                        <iframe style="border:0" loading="lazy" allowfullscreen
+                            src="https://www.google.com/maps/embed/v1/streetview?location=19.2002%2C-104.6843&key=AIzaSyCAcRWKKyAnA4rjyCLWx1tTSxXxOcH-_gw"></iframe>
+                    </div>
                         <figcaption>
-                            <span>Barra de navidad</span>
+                            <span>Barra de navidad, Jalisco</span>
                             <img src="./imagenes/SVG/icon-location.svg" class="location-icon" alt="">
                         </figcaption>
                     </figure>
                 </li>
                 <li class="swiper-slide">
                 <figure>
-                        <img loading="lazy" src="./imagenes/mascota-jalisco.jpg" alt="">
+                        <img loading="lazy" src="./imagenes/Tepic.jpg" alt="">
                         <figcaption>
                             <span>Tepic, Nayarit</span>
                             <img src="./imagenes/SVG/icon-location.svg" class="location-icon" alt="">
@@ -179,7 +181,19 @@
     </section>  <!-- End of section -->
 
     <section id="tours">
-        <h2>Algo sobre tours</h2>
+        <h2>Tours</h2>
+            <div class="tours-information">
+                <strong>
+                    Contamos con una diversa variedad de tours a su disposición
+                </strong>
+                <ul id="tours-list">
+                    <li>Tour acuático</li>
+                    <li>Tours en Blazers</li>
+                    <li>Tour Aéreo</li>
+                    <li>Tour de montaña Tirolesa</li>
+                </ul>
+                <span class="small-letter">Pregunta para más información.</span>
+            </div>
     </section>
     <section id="contacto">
         <div class="personal-info">
