--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <figure>
                     <div class="maps-container">
                         <iframe style="border:0" loading="lazy" allowfullscreen
-                            src="https://www.google.com/maps/embed/v1/streetview?location=19.2002%2C-104.6843&key=AIzaSyCAcRWKKyAnA4rjyCLWx1tTSxXxOcH-_gw"></iframe>
+                            src="https://www.google.com/maps/embed/v1/streetview?location=19.2002%2C-104.6843&key="></iframe>
                     </div>
                         <figcaption>
                             <span>Barra de navidad, Jalisco</span>
