--- a/index.html
+++ b/index.html
@@ -142,16 +142,18 @@
                     </figure>
                 </li>
                 <li class="swiper-slide">
-                <figure>
+                <div class="foraneo-li-container">
                     <div class="maps-container">
-                        <iframe style="border:0" loading="lazy" allowfullscreen
-                            src="https://www.google.com/maps/embed/v1/streetview?location=19.2002%2C-104.6843&key="></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15070.995308141542!2d-104.6789847!3d19.20616985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8424b8f557d08435%3A0x466dced5494b4b26!2s48987%20Barra%20de%20Navidad%2C%20Jalisco!5e0!3m2!1sen!2smx!4v1702337867082!5m2!1sen!2smx"
+                        style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                        <figcaption>
+                        <div class="legend">
                             <span>Barra de navidad, Jalisco</span>
                             <img src="./imagenes/SVG/icon-location.svg" class="location-icon" alt="">
-                        </figcaption>
-                    </figure>
+                        </div>
+                    </div>
                 </li>
                 <li class="swiper-slide">
                 <figure>
@@ -216,7 +218,7 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- Script -->
-    <script src="index.js"></script>
+    <script src="JS/index.js" ></script>
 </body>
 
 </html>
