tours font size increase

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <div class="service">
                 <h3>Viajes seguros</h3>
                 <i class="fa-solid fa-shield"></i>
-                <p>Tanto en viajes <a href="#local" class="skill-link">Locales</a> como <a href="#foraneo" class="skill-link">Foráneos</a>
-                Se ejerce la máxima precaución.</p>
+                <p>Ya sean viajes <a href="#local" class="skill-link">Locales</a> o <a href="#foraneo" class="skill-link">Foráneos</a>
+                Se ejerce la máxima precaución para su comodidad.</p>
             </div>
             <div class="service">
                 <h3>English Spoken</h3>
@@ -93,7 +93,7 @@
             <div class="service">
                 <h3>Metodo de pago</h3>
                 <i class="fa-solid fa-dollar-sign"></i>
-                <p>Tarjeta de credito / Pago en efectivo</p>
+                <p>Tarjeta de crédito y débito / Pago en efectivo</p>
             </div>
         </div>
     </section>
@@ -127,7 +127,7 @@
                             ?
                         </button>
                         <figcaption>
-                            <span>San Sebastian</span>
+                            <span>San Sebastián, Jalisco</span>
                             <img src="./imagenes/SVG/icon-location.svg" class="location-icon" alt="">
                         </figcaption>
                     </figure>
@@ -188,13 +188,14 @@
                 <strong>
                     Contamos con una diversa variedad de tours a su disposición
                 </strong>
+                <i class="fa-solid fa-check"></i>
                 <ul id="tours-list">
-                    <li>Tour acuático</li>
-                    <li>Tours en Blazers</li>
-                    <li>Tour Aéreo</li>
-                    <li>Tour de montaña Tirolesa</li>
+                    <li>Tour <span class="colored">acuático</span></li>
+                    <li>Tours en <span class="colored">blazers</span></li>
+                    <li>Tour <span class="colored">aéreo</span></li>
+                    <li>Tour de <span class="colored">montaña tirolesa</span></li>
                 </ul>
-                <span class="small-letter">Pregunta para más información.</span>
+                <span class="small-letter">Contacte para más información.</span>
             </div>
     </section>
     <section id="contacto">
