minor font color change on tours

--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
                 </strong>
                 <i class="fa-solid fa-check"></i>
                 <ul id="tours-list">
-                    <li>Tour <span class="colored">acuático</span></li>
-                    <li>Tours en <span class="colored">blazers</span></li>
-                    <li>Tour <span class="colored">aéreo</span></li>
-                    <li>Tour de <span class="colored">montaña tirolesa</span></li>
+                    <li>Tour acuático</li>
+                    <li>Tours en blazers</li>
+                    <li>Tour aéreo</li>
+                    <li>Tour de montaña tirolesa</li>
                 </ul>
                 <span class="small-letter">Contacte para más información.</span>
             </div>
